--- a/BOM/bom.html
+++ b/BOM/bom.html
@@ -8,15 +8,16 @@
 <body>
 	<div class="table">
 		<div class="controlers">
-			<input type="button" value="properties" class="properties">
-			<input type="button" value="window_open" class="window_open">
-			<input type="button" value="use" class="use">
-			<input type="button" value="resize" class="resize">
-			<input type="button" value="reduce" class="reduce">
-			<input type="button" value="6" class="six">
-			<input type="button" value="7" class="seven">
-			<input type="button" value="8" class="eight">
-			<input type="button" value="9" class="nine">
+			<input type="button" value="Properties" class="properties">
+			<input type="button" value="Open Tab" class="window_tab">
+			<input type="button" value="Properties New Tab" class="properties_new_tab">
+			<input type="button" value="New Window" class="newWin">
+			<input type="button" value="Resize To" class="resize_to">
+			<input type="button" value="Resize By" class="resize_by">
+			<input type="button" value="Scroll New Window" class="scroll_new">
+			<input type="button" value="Scroll Current Window" class="scroll_current">
+			<input type="button" value="Focus" class="focus">
+			<input type="button" value="Close & Print" class="close_print">
 		</div>
 	</div>
 	<script type="text/javascript" src="bottom.js"></script>
