--- a/Copy Note/index1.html
+++ b/Copy Note/index1.html
@@ -4,15 +4,16 @@
 	<meta charset="UTF-8">
 	<title>Remember</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<script src="jquery-3.0.0.min.js"></script>
+	<script type="text/javascript" src="ui/jquery-ui.min.js"></script>
 </head>
 <body>
-
 	<header class="head">Remember!
 		<button class="plus_note"></button>
 	</header>
 
-	<section class="table"></section>
-
-	<script src="action.js"></script>
+	<section class="table">
+	</section>
+	<script src="action1.js"></script>
 </body>
 </html>
